# cloud-loader

./: README.md  pyproject.toml
cloud_cloner/: __main__.py  clone.py
cloud_loader/: __main__.py  load.py
tests/: test_clone.py  test_load_config.py
